# MatildaPiano

./: .gitignore  BUILD-SIMPLE.md  CHANGELOG.md  CMakeLists.txt  QUICKSTART.md  README.md  build.sh  clean-and-build.sh
Assets/: .gitkeep
Samples/: .gitkeep
Source/: ChickenHeadKnob.cpp  ChickenHeadKnob.h  DelayModule.cpp  DelayModule.h  MatildaKeyboardComponent.cpp  MatildaKeyboardComponent.h  MatildaSamplerSound.cpp  MatildaSamplerSound.h  MatildaSamplerVoice.cpp  MatildaSamplerVoice.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReverbModule.cpp  ReverbModule.h  TapeModule.cpp  TapeModule.h  XYPadComponent.cpp  XYPadComponent.h
Tests/: MatildaPianoTests.cpp
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: cursor.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
docs/: DEV-HANDOFF.md  FIGMA-SPEC.md  MILESTONES.md  PRD.md  TESTING-LOG.md  architecture.md  figma-ui.md  testing.md
scripts/: copy-assets-to-documents.sh  fetch-piano-samples.sh  normalize-piano-samples.sh
